--- a/index.html
+++ b/index.html
@@ -20,3 +20,20 @@
             </ul>
         </nav>
     </header>
+
+    <main class="home">
+        <section class="intro">
+            <img src="images/Pic of me.jpeg" alt="Professional picture of Zachary Grabowski">
+            <div>
+                <h2>Hello, I'm Zachary (Zach) Grabowski</h2>
+                <p>I am a recent Michigan State graduate with a degree in Information Science and currently open to work.</p>
+                <p>I am looking to gain entry into a tech related field to gain my knowledge base and explore the high tech world we live in today! I currently enjoy IT related tasks, web developing and coding, and anything else related to tech.</p>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2025 Zachary Grabowski. All rights reserved.</p>
+    </footer>
+</body>
+</html>
