--- a/about.html
+++ b/about.html
@@ -21,4 +21,31 @@
         </nav>
     </header>
 
+    <main class="about"></main>
+        <h2>About Me</h2>
+        <img src="images/Pic of me.jpeg" alt="Professional picture of Zachary Grabowski">
+        <section class="bio">
+            <p>As a recent MSU grad like mentioned before, I love all things tech including experience with coding languages HTML, Java, Python, and CSS. I also have real hands on experience and enjoying working with computers and troubleshooting technical and software problems. I have a strong understanding of all things Microsoft Office Suite and working in technical folders.</p>
+            <p>When I am not face deep in technology, I love to be outside. Whether it is playing pickleball, fishing with friends, or golfing with friends you can always catch me outside. I follow sports as well including baseball, hockey, and football mostly. Here are some of my teams:</p>
+            <h3>Sports Teams I Follow:</h3>
+            <ul>
+                <li>Ohio State</li>
+                <li>Pittsburgh Steelers</li>
+                <li>Pittsburgh Penguins</li>
+                <li>Pittsburgh Pirates</li>
+        </section>
+
+        <section class="experience">
+            <h2>Resume</h2> 
+            <div class="resume-image"> 
+                <img src="images/resume.png" alt="My resume">
+            </div> 
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2025 Zachary Grabowski. All rights reserved.</p>
+    </footer>
+        
 </body>
+</html>
