--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
         </nav>
     </header>
 
-    <main class="about"></main>
+    <main class="about">
         <h2>About Me</h2>
         <img src="images/Pic of me.jpeg" alt="Professional picture of Zachary Grabowski">
         <section class="bio">
