--- a/contact.html
+++ b/contact.html
@@ -20,3 +20,38 @@
             </ul>
         </nav>
     </header>
+
+      <main class="contact">
+    <h2>Contact Me</h2>
+    <section class="contact-info">
+      <p>Email me at: <a href="mailto:zach@example.com">zach@example.com</a></p>
+      <h3>Social Links</h3>
+      <div class="social-icons">
+        <a href="https://www.instagram.com/zgrabby11/" target="_blank">Instagram</a>
+        <a href="https://www.linkedin.com/in/zach-grabowski-959647246" target="_blank">LinkedIn</a>
+        <a href="https://x.com/zgrabby11" target="_blank">X (Twitter)</a>
+        <a href="https://profile.indeed.com/" target="_blank">Indeed</a>
+        <a href="https://www.facebook.com/zach.grabowski.35" target="_blank">Facebook</a>>
+      </div>
+    </section>
+
+    <section class="contact-form">
+      <h2>Get in touch with me!</h2>
+      <form>
+        <label>Name:</label>
+        <input type="text" id="name" name="name" required>
+
+        <label>Email:</label>
+        <input type="email" id="email" name="email" required>
+
+        <button type="submit">Submit</button>
+      </form>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Zachary Grabowski. All rights reserved.</p>
+  </footer>
+
+</body>
+</html>
