--- a/contact.html
+++ b/contact.html
@@ -27,11 +27,11 @@
       <p>Email me at: <a href="mailto:zach@example.com">zach@example.com</a></p>
       <h3>Social Links</h3>
       <div class="social-icons">
-        <a href="https://www.instagram.com/zgrabby11/" target="_blank">Instagram</a>
-        <a href="https://www.linkedin.com/in/zach-grabowski-959647246" target="_blank">LinkedIn</a>
-        <a href="https://x.com/zgrabby11" target="_blank">X (Twitter)</a>
-        <a href="https://profile.indeed.com/" target="_blank">Indeed</a>
-        <a href="https://www.facebook.com/zach.grabowski.35" target="_blank">Facebook</a>>
+        <a rel="insta" href="https://www.instagram.com/zgrabby11/">Instagram</a>
+        <a rel="linkin" href="https://www.linkedin.com/in/zach-grabowski-959647246">LinkedIn</a>
+        <a rel="x" href="https://x.com/zgrabby11">X (Twitter)</a>
+        <a rel="ind" href="https://profile.indeed.com/">Indeed</a>
+        <a rel="fb" href="https://www.facebook.com/zach.grabowski.35">Facebook</a>
       </div>
     </section>
 
