--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
       <main class="contact">
     <h2>Contact Me</h2>
     <section class="contact-info">
-      <p>Email me at: <a href="grabowskizach11@gmail.com">grabowskizach11@gmail.com</a></p>
+      <p>Email me at: <a href="mailto:grabowskizach11@gmail.com">grabowskizach11@gmail.com</a></p>
       <h3>Social Links</h3>
       <div class="social-icons">
         <a rel="insta" href="https://www.instagram.com/zgrabby11/">Instagram</a>
