--- a/contact.html
+++ b/contact.html
@@ -38,14 +38,14 @@
 
     <section class="contact-form">
       <h2>Get in touch with me!</h2>
-      <form>
+      <form action="mailto:grabowskizach11@gmail.com" method="POST" enctype="text/plain">
         <label>Name:</label>
         <input type="text" id="name" name="name" required>
 
         <label>Email:</label>
         <input type="email" id="email" name="email" required>
 
-        <button type="submit">Submit</button>
+        <button>Submit</button>
       </form>
     </section>
   </main>
