--- a/cert.html
+++ b/cert.html
@@ -20,3 +20,27 @@
             </ul>
         </nav>
     </header>
+
+  <main class="certifications">
+    <h2>Certifications</h2>
+    <section class="cert-list">
+    <h3>Currently In Progress:</h3>
+      <ul>
+        <li>COMPTIA+</li>
+        <li>Microsoft 365 Certified: Fundamentals</li>
+        <li>Microsoft Certified: Azure Fundamentals</li>
+      </ul>
+    <h3>Will Pursue in the Future:</h3>
+      <ul>
+        <li>Microsoft Certified: Azure AI Fundamentals</li>
+        <li>Microsoft Certified: Security, Compliance, and Identity Fundamentals</li>
+        <li>Microsoft Certified: Azure Admin Associate</li>
+      </ul>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Zachary Grabowski. All rights reserved.</p>
+  </footer>
+</body>
+</html>
