--- a/contact.html
+++ b/contact.html
@@ -37,13 +37,16 @@
     </section>
 
     <section class="contact-form">
-      <h2>Get in touch with me!</h2>
+      <h2>Just want to leave your name and a message? Get in touch with me!</h2>
       <form action="mailto:grabowskizach11@gmail.com" method="POST" enctype="text/plain">
         <label>Name:</label>
         <input type="text" id="name" name="name" required>
 
         <label>Email:</label>
         <input type="email" id="email" name="email" required>
+
+        <label>Comments:</label>
+        <input type="text" id="text" name="text" required>
 
         <button>Submit</button>
       </form>
