--- a/port.html
+++ b/port.html
@@ -20,3 +20,21 @@
             </ul>
         </nav>
     </header>
+
+  <main class="portfolio">
+    <h2>Portfolio</h2>
+    <section class="project">
+      <img src="images/my blog.png" alt="Screenshot of my project">
+      <div>
+        <h3>GitHub Projects</h3>
+        <p>Explore my recent work and personal projects. I enjoy building clean, responsive web applications using modern technologies. View more on my GitHub profile below.</p>
+        <p><strong>GitHub:</strong> <a href="https://github.com/zgrabby11" target="_blank">https://github.com/zgrabby11</a></p>
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Zachary Grabowski. All rights reserved.</p>
+  </footer>
+</body>
+</html>
