--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <header>
+      <div class="resume-image"> 
+          <img src="images/logo.png" alt="Logo">
+      </div>
         <h1>Zachary Grabowski</h1>
         <p>Aspiring College Graduate Looking for the Next Step of His Career</p>
         <nav>
@@ -46,9 +49,9 @@
         <input type="email" id="email" name="email" required>
 
         <label>Comments:</label>
-        <input type="text" id="text" name="text" required>
+        <textarea id="message" name="message" rows="5" required></textarea>
 
-        <button>Submit</button>
+        <button type="submit">Submit</button>
       </form>
     </section>
   </main>
