--- a/port.html
+++ b/port.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <header>
+        <div class="resume-image"> 
+          <img src="images/logo.png" alt="Logo">
+        </div>
         <h1>Zachary Grabowski</h1>
         <p>Aspiring College Graduate Looking for the Next Step of His Career</p>
         <nav>
