--- a/port.html
+++ b/port.html
@@ -27,6 +27,7 @@
   <main class="portfolio">
     <h2>Portfolio</h2>
     <section class="project">
+      <h3>A recent project of mine below:</h3>
       <img src="images/my blog.png" alt="Screenshot of my project">
       <div>
         <h3>GitHub Projects</h3>
