--- a/port.html
+++ b/port.html
@@ -28,7 +28,7 @@
     <h2>Portfolio</h2>
     <section class="project">
       <h3>A recent project of mine below:</h3>
-      <img src="images/my blog.png" alt="Screenshot of my project">
+      <img class="port-image" src="images/my blog.png" alt="Screenshot of my project">
       <div>
         <h3>GitHub Projects</h3>
         <p>Explore my recent work and personal projects. I enjoy building clean, responsive web applications using modern technologies. View more on my GitHub profile below.</p>
