--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
         <section class="experience">
             <h2>Resume</h2> 
             <div class="resume-image"> 
-                <img src="images/resume.png" alt="My resume">
+                <img class="resume-image" src="images/resume.png" alt="My resume">
             </div> 
         </section>
     </main>
