--- a/port.html
+++ b/port.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="resume-image"> 
-          <img src="images/logo.png" alt="Logo">
+          <img class="logo-image" src="images/logo.png" alt="Logo">
         </div>
         <h1>Zachary Grabowski</h1>
         <p>Aspiring College Graduate Looking for the Next Step of His Career</p>
