--- a/about.html
+++ b/about.html
@@ -28,8 +28,8 @@
         <h2>About Me</h2>
         <img class="picofme-image" src="images/Pic of me.jpeg" alt="Professional picture of Zachary Grabowski">
         <section class="bio">
-            <p>As a recent MSU grad like mentioned before, I love all things tech including experience with coding languages HTML, Java, Python, and CSS. I also have real hands on experience and enjoying working with computers and troubleshooting technical and software problems. I have a strong understanding of all things Microsoft Office Suite and working in technical folders.</p>
-            <p>When I am not face deep in technology, I love to be outside. Whether it is playing pickleball, fishing with friends, or golfing with friends you can always catch me outside. I follow sports as well including baseball, hockey, and football mostly. Here are some of my teams:</p>
+            <p>I am a recent graduate of Michigan State University with a passion for technology and experience in coding languages such as HTML, Java, Python, and CSS. I also have hands-on experience working with computers, troubleshooting technical and software issues, and a strong proficiency in Microsoft Office Suite and file management.</p>
+            <p>When I&apos;m not immersed in technology, I enjoy spending time outdoors. Whether it&apos;s playing pickleball, fishing, or golfing with friends, you can usually find me outside. I am also an avid sports fan, particularly of baseball, hockey, and football. </p>
             <h3>Sports Teams I Follow:</h3>
             <ul>
                 <li>Ohio State</li>
