--- a/cert.html
+++ b/cert.html
@@ -29,7 +29,7 @@
     <section class="cert-list">
     <h3>Currently In Progress:</h3>
       <ul>
-        <li>COMPTIA+</li>
+        <li>COMPTIA A+</li>
         <li>Microsoft 365 Certified: Fundamentals</li>
         <li>Microsoft Certified: Azure Fundamentals</li>
       </ul>
