--- a/contact.html
+++ b/contact.html
@@ -30,11 +30,11 @@
       <p>Email me at: <a href="mailto:grabowskizach11@gmail.com">grabowskizach11@gmail.com</a></p>
       <h3>Social Links</h3>
       <div class="social-icons">
-        <a rel="insta" href="https://www.instagram.com/zgrabby11/">Instagram</a>
-        <a rel="linkin" href="https://www.linkedin.com/in/zach-grabowski-959647246">LinkedIn</a>
-        <a rel="x" href="https://x.com/zgrabby11">X (Twitter)</a>
-        <a rel="ind" href="https://profile.indeed.com/">Indeed</a>
-        <a rel="fb" href="https://www.facebook.com/zach.grabowski.35">Facebook</a>
+        <a rel="insta" href="https://www.instagram.com/zgrabby11/" class="social-box">Instagram</a>
+        <a rel="linkin" href="https://www.linkedin.com/in/zach-grabowski-959647246" class="social-box">LinkedIn</a>
+        <a rel="x" href="https://x.com/zgrabby11" class="social-box">X (Twitter)</a>
+        <a rel="ind" href="https://profile.indeed.com/" class="social-box">Indeed</a>
+        <a rel="fb" href="https://www.facebook.com/zach.grabowski.35" class="social-box">Facebook</a>
       </div>
     </section>
 
