--- a/cert.html
+++ b/cert.html
@@ -8,9 +8,11 @@
 </head>
 <body>
     <header>
-      <div class="resume-image"> 
-          <img class="logo-image" src="images/logo.png" alt="Logo">
-      </div>
+        <div class="resume-image"> 
+            <a href="index.html">
+                <img class="logo-image" src="images/logo.png" alt="Logo">
+            </a>
+        </div>
         <h1>Zachary Grabowski</h1>
         <p>Aspiring College Graduate Looking for the Next Step of His Career</p>
         <nav>
