--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
 
     <main class="about">
         <h2>About Me</h2>
-        <img class="picofme-image" src="images/Pic of me.jpeg" alt="Professional picture of Zachary Grabowski">
+        <img class="picofme-image" src="images/picofme.jpeg" alt="Professional picture of Zachary Grabowski">
         <section class="bio">
             <p>I am a recent graduate of Michigan State University with a passion for technology and experience in coding languages such as HTML, Java, Python, and CSS. I also have hands-on experience working with computers, troubleshooting technical and software issues, and a strong proficiency in Microsoft Office Suite and file management.</p>
             <p>When I&apos;m not immersed in technology, I enjoy spending time outdoors. Whether it&apos;s playing pickleball, fishing, or golfing with friends, you can usually find me outside. I am also an avid sports fan, particularly of baseball, hockey, and football. </p>
