--- a/about.html
+++ b/about.html
@@ -7,51 +7,52 @@
     <title>Home - Zach's Website</title>
 </head>
 <body>
-    <header>
-        <div class="resume-image"> 
-            <a href="index.html">
-                <img class="logo-image" src="images/logo.png" alt="Logo">
-            </a>
-        </div>
-        <h1>Zachary Grabowski</h1>
-        <p>Aspiring College Graduate Looking for the Next Step of His Career</p>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="cert.html">Certifications</a></li>
-                <li><a href="port.html">Portfolio</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <main class="about">
-        <h2>About Me</h2>
-        <img class="picofme-image" src="images/picofme.jpeg" alt="Professional picture of Zachary Grabowski">
-        <section class="bio">
-            <p>I am a recent graduate of Michigan State University with a passion for technology and experience in coding languages such as HTML, Java, Python, and CSS. I also have hands-on experience working with computers, troubleshooting technical and software issues, and a strong proficiency in Microsoft Office Suite and file management.</p>
-            <p>When I&apos;m not immersed in technology, I enjoy spending time outdoors. Whether it&apos;s playing pickleball, fishing, or golfing with friends, you can usually find me outside. I am also an avid sports fan, particularly of baseball, hockey, and football. </p>
-            <h3>Sports Teams I Follow:</h3>
-            <ul>
-                <li>Ohio State</li>
-                <li>Pittsburgh Steelers</li>
-                <li>Pittsburgh Penguins</li>
-                <li>Pittsburgh Pirates</li>
-            </ul>
-        </section>
-
-        <section class="experience">
-            <h2>Resume</h2> 
+    <div class="page-wrapper">
+        <header>
             <div class="resume-image"> 
-                <img class="resume-image" src="images/resume.png" alt="My resume">
-            </div> 
-        </section>
-    </main>
+                <a href="index.html">
+                    <img class="logo-image" src="images/logo.png" alt="Logo">
+                </a>
+            </div>
+            <h1>Zachary Grabowski</h1>
+            <p>Aspiring College Graduate Looking for the Next Step of His Career</p>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="cert.html">Certifications</a></li>
+                    <li><a href="port.html">Portfolio</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
+        </header>
 
-    <footer>
-        <p>&copy; 2025 Zachary Grabowski. All rights reserved.</p>
-    </footer>
-        
+        <main class="about">
+            <h2>About Me</h2>
+            <img class="picofme-image" src="images/picofme.jpeg" alt="Professional picture of Zachary Grabowski">
+            <section class="bio">
+                <p>I am a recent graduate of Michigan State University with a passion for technology and experience in coding languages such as HTML, Java, Python, and CSS. I also have hands-on experience working with computers, troubleshooting technical and software issues, and a strong proficiency in Microsoft Office Suite and file management.</p>
+                <p>When I&apos;m not immersed in technology, I enjoy spending time outdoors. Whether it&apos;s playing pickleball, fishing, or golfing with friends, you can usually find me outside. I am also an avid sports fan, particularly of baseball, hockey, and football. </p>
+                <h3>Sports Teams I Follow:</h3>
+                <ul>
+                    <li>Ohio State</li>
+                    <li>Pittsburgh Steelers</li>
+                    <li>Pittsburgh Penguins</li>
+                    <li>Pittsburgh Pirates</li>
+                </ul>
+            </section>
+
+            <section class="experience">
+                <h2>Resume</h2> 
+                <div class="resume-image"> 
+                    <img class="resume-image" src="images/resume.png" alt="My resume">
+                </div> 
+            </section>
+        </main>
+
+        <footer>
+            <p>&copy; 2025 Zachary Grabowski. All rights reserved.</p>
+        </footer>
+    </div>   
 </body>
 </html>
