--- a/index.html
+++ b/index.html
@@ -7,37 +7,39 @@
     <title>Home - Zach's Website</title>
 </head>
 <body>
-    <header>
-        <div class="resume-image"> 
-            <a href="index.html">
-                <img class="logo-image" src="images/logo.png" alt="Logo">
-            </a>
-        </div>
-        <h1>Zachary Grabowski</h1>
-        <p>Aspiring College Graduate Looking for the Next Step of His Career</p>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="cert.html">Certifications</a></li>
-                <li><a href="port.html">Portfolio</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <main class="home">
-        <section class="intro">
-            <div>
-                <h2>Hello, I'm Zachary (Zach) Grabowski</h2>
-                <p>I am a recent Michigan State graduate with a degree in Information Science and currently open to work.</p>
-                <p>I am looking to gain entry into a tech related field to gain my knowledge base and explore the high tech world we live in today! I currently enjoy IT related tasks, web developing and coding, and anything else related to tech.</p>
+    <div class="page-wrapper">
+        <header>
+            <div class="resume-image"> 
+                <a href="index.html">
+                    <img class="logo-image" src="images/logo.png" alt="Logo">
+                </a>
             </div>
-        </section>
-    </main>
+            <h1>Zachary Grabowski</h1>
+            <p>Aspiring College Graduate Looking for the Next Step of His Career</p>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="cert.html">Certifications</a></li>
+                    <li><a href="port.html">Portfolio</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
+        </header>
 
-    <footer>
-        <p>&copy; 2025 Zachary Grabowski. All rights reserved.</p>
-    </footer>
+        <main class="home">
+            <section class="intro">
+                <div>
+                    <h2>Hello, I'm Zachary (Zach) Grabowski</h2>
+                    <p>I am a recent Michigan State graduate with a degree in Information Science and currently open to work.</p>
+                    <p>I am looking to gain entry into a tech related field to gain my knowledge base and explore the high tech world we live in today! I currently enjoy IT related tasks, web developing and coding, and anything else related to tech.</p>
+                </div>
+            </section>
+        </main>
+
+        <footer>
+            <p>&copy; 2025 Zachary Grabowski. All rights reserved.</p>
+        </footer>
+    </div>
 </body>
 </html>
