--- a/cert.html
+++ b/cert.html
@@ -7,45 +7,47 @@
     <title>Home - Zach's Website</title>
 </head>
 <body>
-    <header>
-        <div class="resume-image"> 
-            <a href="index.html">
-                <img class="logo-image" src="images/logo.png" alt="Logo">
-            </a>
-        </div>
-        <h1>Zachary Grabowski</h1>
-        <p>Aspiring College Graduate Looking for the Next Step of His Career</p>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="cert.html">Certifications</a></li>
-                <li><a href="port.html">Portfolio</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+  <div class="page-wrapper">
+      <header>
+          <div class="resume-image"> 
+              <a href="index.html">
+                  <img class="logo-image" src="images/logo.png" alt="Logo">
+              </a>
+          </div>
+          <h1>Zachary Grabowski</h1>
+          <p>Aspiring College Graduate Looking for the Next Step of His Career</p>
+          <nav>
+              <ul>
+                  <li><a href="index.html">Home</a></li>
+                  <li><a href="about.html">About</a></li>
+                  <li><a href="cert.html">Certifications</a></li>
+                  <li><a href="port.html">Portfolio</a></li>
+                  <li><a href="contact.html">Contact</a></li>
+              </ul>
+          </nav>
+      </header>
 
-  <main class="certifications">
-    <h2>Certifications</h2>
-    <section class="cert-list">
-    <h3>Currently In Progress:</h3>
-      <ul>
-        <li>COMPTIA A+</li>
-        <li>Microsoft 365 Certified: Fundamentals</li>
-        <li>Microsoft Certified: Azure Fundamentals</li>
-      </ul>
-    <h3>Will Pursue in the Future:</h3>
-      <ul>
-        <li>Microsoft Certified: Azure AI Fundamentals</li>
-        <li>Microsoft Certified: Security, Compliance, and Identity Fundamentals</li>
-        <li>Microsoft Certified: Azure Admin Associate</li>
-      </ul>
-    </section>
-  </main>
+    <main class="certifications">
+      <h2>Certifications</h2>
+      <section class="cert-list">
+      <h3>Currently In Progress:</h3>
+        <ul>
+          <li>COMPTIA A+</li>
+          <li>Microsoft 365 Certified: Fundamentals</li>
+          <li>Microsoft Certified: Azure Fundamentals</li>
+        </ul>
+      <h3>Will Pursue in the Future:</h3>
+        <ul>
+          <li>Microsoft Certified: Azure AI Fundamentals</li>
+          <li>Microsoft Certified: Security, Compliance, and Identity Fundamentals</li>
+          <li>Microsoft Certified: Azure Admin Associate</li>
+        </ul>
+      </section>
+    </main>
 
-  <footer>
-    <p>&copy; 2025 Zachary Grabowski. All rights reserved.</p>
-  </footer>
+    <footer>
+      <p>&copy; 2025 Zachary Grabowski. All rights reserved.</p>
+    </footer>
+  </div>
 </body>
 </html>
