--- a/port.html
+++ b/port.html
@@ -7,40 +7,42 @@
     <title>Home - Zach's Website</title>
 </head>
 <body>
-    <header>
-        <div class="resume-image"> 
-            <a href="index.html">
-                <img class="logo-image" src="images/logo.png" alt="Logo">
-            </a>
+  <div class="page-wrapper">
+      <header>
+          <div class="resume-image"> 
+              <a href="index.html">
+                  <img class="logo-image" src="images/logo.png" alt="Logo">
+              </a>
+          </div>
+          <h1>Zachary Grabowski</h1>
+          <p>Aspiring College Graduate Looking for the Next Step of His Career</p>
+          <nav>
+              <ul>
+                  <li><a href="index.html">Home</a></li>
+                  <li><a href="about.html">About</a></li>
+                  <li><a href="cert.html">Certifications</a></li>
+                  <li><a href="port.html">Portfolio</a></li>
+                  <li><a href="contact.html">Contact</a></li>
+              </ul>
+          </nav>
+      </header>
+
+    <main class="portfolio">
+      <h2>Portfolio</h2>
+      <section class="project">
+        <h3>A recent project of mine below:</h3>
+        <img class="port-image" src="images/myblog.png" alt="Screenshot of my project">
+        <div>
+          <h3>GitHub Projects</h3>
+          <p>Explore my recent work and personal projects. I enjoy building clean, responsive web applications using modern technologies. View more on my GitHub profile below.</p>
+          <p><strong>GitHub:</strong> <a href="https://github.com/zgrabby11" target="_blank">https://github.com/zgrabby11</a></p>
         </div>
-        <h1>Zachary Grabowski</h1>
-        <p>Aspiring College Graduate Looking for the Next Step of His Career</p>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="cert.html">Certifications</a></li>
-                <li><a href="port.html">Portfolio</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+      </section>
+    </main>
 
-  <main class="portfolio">
-    <h2>Portfolio</h2>
-    <section class="project">
-      <h3>A recent project of mine below:</h3>
-      <img class="port-image" src="images/myblog.png" alt="Screenshot of my project">
-      <div>
-        <h3>GitHub Projects</h3>
-        <p>Explore my recent work and personal projects. I enjoy building clean, responsive web applications using modern technologies. View more on my GitHub profile below.</p>
-        <p><strong>GitHub:</strong> <a href="https://github.com/zgrabby11" target="_blank">https://github.com/zgrabby11</a></p>
-      </div>
-    </section>
-  </main>
-
-  <footer>
-    <p>&copy; 2025 Zachary Grabowski. All rights reserved.</p>
-  </footer>
+    <footer>
+      <p>&copy; 2025 Zachary Grabowski. All rights reserved.</p>
+    </footer>
+  </div>
 </body>
 </html>
